--- a/Topics/Custom threads/Writing a thread for printing numbers/task-info.yaml
+++ b/Topics/Custom threads/Writing a thread for printing numbers/task-info.yaml
@@ -9,6 +9,9 @@ files:
     \ \n}"
     learner_created: false
 feedback_link: https://hyperskill.org/learn/step/2525#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: <html>Correct solution</html>
+  time: "Mon, 09 Dec 2024 10:42:57 UTC"
 record: -1
 submission_language: java17
