--- a/Topics/Thread management/VeganPizza/task-info.yaml
+++ b/Topics/Thread management/VeganPizza/task-info.yaml
@@ -65,6 +65,9 @@ files:
       }
     learner_created: false
 feedback_link: https://hyperskill.org/learn/step/3662#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: <html>Correct solution</html>
+  time: "Wed, 11 Dec 2024 10:42:42 UTC"
 record: -1
 submission_language: java17
