--- a/Topics/Thread management/lesson-info.yaml
+++ b/Topics/Thread management/lesson-info.yaml
@@ -2,3 +2,6 @@ content:
   - Theory
   - Join
   - VeganPizza
+  - Summing with threads
+  - The order of lines
+  - Ordering the execution of threads
