--- a/Topics/Threads as objects/lesson-info.yaml
+++ b/Topics/Threads as objects/lesson-info.yaml
@@ -5,3 +5,6 @@ content:
   - Find min and max priorities
   - Counting threads
   - Is thread daemon
+  - Thread name
+  - Thread Basics  Birth   Life
+  - Getting current thread info
