--- a/Topics/section-info.yaml
+++ b/Topics/section-info.yaml
@@ -1,2 +1,9 @@
 content:
   - Throwing exceptions
+  - Lambda expressions
+  - Threads as objects
+  - Custom threads
+  - Thread management
+  - Input streams
+  - Try with resources
+  - Output streams
