--- a/Topics/Custom threads/Multiple threads/task-info.yaml
+++ b/Topics/Custom threads/Multiple threads/task-info.yaml
@@ -32,6 +32,6 @@ files:
       }
     learner_created: false
 feedback_link: https://hyperskill.org/learn/step/2519#comment
-status: Unchecked
+status: Solved
 record: -1
 submission_language: java17
