--- a/Topics/Lambda expressions/Next even number/task-info.yaml
+++ b/Topics/Lambda expressions/Next even number/task-info.yaml
@@ -12,6 +12,9 @@ files:
       }
     learner_created: false
 feedback_link: https://hyperskill.org/learn/step/2364#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: <html>Correct solution</html>
+  time: "Sat, 07 Dec 2024 12:57:57 UTC"
 record: -1
 submission_language: java17
