--- a/Topics/Output streams/Convert to char array/task-info.yaml
+++ b/Topics/Output streams/Convert to char array/task-info.yaml
@@ -13,6 +13,9 @@ files:
       }
     learner_created: false
 feedback_link: https://hyperskill.org/learn/step/8846#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: <html>Correct solution</html>
+  time: "Mon, 23 Dec 2024 11:43:13 UTC"
 record: -1
 submission_language: java17
