--- a/Topics/Thread management/Ordering the execution of threads/task-info.yaml
+++ b/Topics/Thread management/Ordering the execution of threads/task-info.yaml
@@ -8,6 +8,9 @@ files:
     \ here \n    }\n}"
     learner_created: false
 feedback_link: https://hyperskill.org/learn/step/2536#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: <html>Correct solution</html>
+  time: "Wed, 11 Dec 2024 11:04:21 UTC"
 record: -1
 submission_language: java17
