--- a/Topics/Thread management/Summing with threads/task-info.yaml
+++ b/Topics/Thread management/Summing with threads/task-info.yaml
@@ -66,6 +66,9 @@ files:
       }
     learner_created: false
 feedback_link: https://hyperskill.org/learn/step/2538#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: <html>Correct solution</html>
+  time: "Wed, 11 Dec 2024 10:55:54 UTC"
 record: -1
 submission_language: java17
