--- a/Topics/Threads as objects/Getting current thread info/task-info.yaml
+++ b/Topics/Threads as objects/Getting current thread info/task-info.yaml
@@ -12,6 +12,9 @@ files:
       }
     learner_created: false
 feedback_link: https://hyperskill.org/learn/step/2521#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: <html>Correct solution</html>
+  time: "Sun, 08 Dec 2024 13:47:27 UTC"
 record: -1
 submission_language: java17
