--- a/Topics/Threads as objects/Thread name/task-info.yaml
+++ b/Topics/Threads as objects/Thread name/task-info.yaml
@@ -11,6 +11,9 @@ files:
       }
     learner_created: false
 feedback_link: https://hyperskill.org/learn/step/13220#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: <html>Correct solution</html>
+  time: "Sun, 08 Dec 2024 13:41:00 UTC"
 record: -1
 submission_language: java17
