--- a/Topics/Throwing exceptions/Throw an IOException/task-info.yaml
+++ b/Topics/Throwing exceptions/Throw an IOException/task-info.yaml
@@ -23,6 +23,9 @@ files:
       }
     learner_created: false
 feedback_link: https://hyperskill.org/learn/step/2835#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: <html>Correct solution</html>
+  time: "Fri, 06 Dec 2024 11:01:09 UTC"
 record: -1
 submission_language: java17
