--- a/Topics/Throwing exceptions/Throw an unchecked exception/task-info.yaml
+++ b/Topics/Throwing exceptions/Throw an unchecked exception/task-info.yaml
@@ -22,6 +22,9 @@ files:
       }
     learner_created: false
 feedback_link: https://hyperskill.org/learn/step/2832#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: <html>Correct solution</html>
+  time: "Wed, 04 Dec 2024 10:51:13 UTC"
 record: -1
 submission_language: java17
