--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,11 +3,11 @@ hyperskill_project:
   ide_files: https://cogniterra.org/media/attachments/lesson/23048/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: "Mon, 02 Dec 2024 09:29:31 UTC"
+update_date: "Fri, 27 Dec 2024 11:30:14 UTC"
 stages:
   - id: 348
     step: 5490
-    is_completed: false
+    is_completed: true
   - id: 349
     step: 5491
     is_completed: false
