--- a/JSON Database with Java/Add new functionalities/task-info.yaml
+++ b/JSON Database with Java/Add new functionalities/task-info.yaml
@@ -214,6 +214,10 @@ files:
     visible: true
     is_binary: true
     learner_created: true
+  - name: src/server/ParsedCommand.class
+    visible: true
+    is_binary: true
+    learner_created: true
 feedback_link: https://hyperskill.org/learn/step/5492#comment
 status: Unchecked
 record: -1
