--- a/JSON Database with Java/Start work with JSON/task-info.yaml
+++ b/JSON Database with Java/Start work with JSON/task-info.yaml
@@ -430,6 +430,22 @@ files:
           }
       }
     learner_created: false
+  - name: src/client/Main.class
+    visible: true
+    is_binary: true
+    learner_created: true
+  - name: src/server/Main.class
+    visible: true
+    is_binary: true
+    learner_created: true
+  - name: src/client/ClientRequest.class
+    visible: true
+    is_binary: true
+    learner_created: true
+  - name: src/server/ParsedCommand.class
+    visible: true
+    is_binary: true
+    learner_created: true
 feedback_link: https://hyperskill.org/learn/step/5493#comment
 status: Unchecked
 record: -1
