--- a/JSON Database with Java/Start work with JSON/task-info.yaml
+++ b/JSON Database with Java/Start work with JSON/task-info.yaml
@@ -446,6 +446,10 @@ files:
     visible: true
     is_binary: true
     learner_created: true
+  - name: src/client/RequestAsJson.class
+    visible: true
+    is_binary: true
+    learner_created: true
 feedback_link: https://hyperskill.org/learn/step/5493#comment
 status: Unchecked
 record: -1
