--- a/JSON Database with Java/Start work with JSON/task-info.yaml
+++ b/JSON Database with Java/Start work with JSON/task-info.yaml
@@ -394,10 +394,6 @@ files:
     visible: true
     is_binary: true
     learner_created: true
-  - name: src/client/ClientRequest.class
-    visible: true
-    is_binary: true
-    learner_created: true
   - name: test/JsonFinder.java
     visible: true
     text: |
@@ -446,7 +442,10 @@ files:
     visible: true
     is_binary: true
     learner_created: true
-  - name: src/client/RequestAsJson.class
+  - name: src/shared/Request.java
+    visible: true
+    learner_created: true
+  - name: src/shared/Request.class
     visible: true
     is_binary: true
     learner_created: true
