--- a/JSON Database with Java/Manage multiple requests/task-info.yaml
+++ b/JSON Database with Java/Manage multiple requests/task-info.yaml
@@ -665,6 +665,10 @@ files:
   - name: src/server/data/db.json
     visible: true
     learner_created: true
+  - name: src/server/Main$1.class
+    visible: true
+    is_binary: true
+    learner_created: true
 feedback_link: https://hyperskill.org/learn/step/5494#comment
 status: Unchecked
 record: -1
