--- a/JSON Database with Java/Manage multiple requests/task-info.yaml
+++ b/JSON Database with Java/Manage multiple requests/task-info.yaml
@@ -669,6 +669,9 @@ files:
     visible: true
     is_binary: true
     learner_created: true
+  - name: src/client/data/testSet.json
+    visible: true
+    learner_created: true
 feedback_link: https://hyperskill.org/learn/step/5494#comment
 status: Unchecked
 record: -1
