--- a/JSON Database with Java/Store JSON objects in your database/task-info.yaml
+++ b/JSON Database with Java/Store JSON objects in your database/task-info.yaml
@@ -41,6 +41,9 @@ files:
     visible: true
     is_binary: true
     learner_created: true
+  - name: src/client/data/setFile.json
+    visible: true
+    learner_created: true
 feedback_link: https://hyperskill.org/learn/step/5495#comment
 status: Unchecked
 record: -1
