--- a/JSON Database with Java/Store JSON objects in your database/task-info.yaml
+++ b/JSON Database with Java/Store JSON objects in your database/task-info.yaml
@@ -50,6 +50,9 @@ files:
   - name: src/client/data/updateFile.json
     visible: true
     learner_created: true
+  - name: src/shared/StringListDeserializer.java
+    visible: true
+    learner_created: true
 feedback_link: https://hyperskill.org/learn/step/5495#comment
 status: Unchecked
 record: -1
